fix alignment #3

--- a/resources/styles/skin.cali.notifications.less
+++ b/resources/styles/skin.cali.notifications.less
@@ -23,8 +23,9 @@
 	top: 0;
 	height: 35px;
 	ul {
-		padding-top: 0.3em;
+		padding-bottom: 0.3em;
 		li {
+			padding-top: 0.3em;
 			&:hover {
 				background: #EF574F;
 				max-height: 24px;
